Add demo website

--- a/src/component/index.css
+++ b/src/component/index.css
@@ -3,8 +3,8 @@
 }
 
 .fileContainer {
-	background: #f7f7f9;
-	box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.1);
+	background: #fff;
+	box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.05);
 	position: relative;
 	border-radius: 10px;
 	padding: 20px 0;
@@ -14,7 +14,6 @@
 	flex-direction: column;
 	margin: 10px auto;
 	transition: all 0.3s ease-in;
-	max-width: 460px;
 }
 
 .fileContainer input {
